--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,5 @@
+BROWSER=chromium
+
 CLIENT_ID="Get this from twitch https://www.twitch.tv/kraken/oauth2/clients/new"
 
 CLIENT_SECRET="Also get this from twitch https://www.twitch.tv/kraken/oauth2/clients/new"
